--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     text-align: center;
     width: 540px;
     font-size: 15px;
+    margin: auto;
 }
 
 h1 {
@@ -33,6 +34,12 @@ a {
 .line {
     width: 391px;
     height: 0;
-    margin: 0 auto 8px;
+    margin: 32px auto 8px;
     border: 1px solid #ECEFF2;
+}
+
+#wave {
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
